2007-07-03  Patrick van Staveren  <trick@vanstaveren.us>

	* ext/taglib-sharp: change svn:externals pointer to use http:// rather
	than svn://

2007-06-12  Aaron Bockover  <abock@gnome.org>

	* data/audio-profiles/wavpack.xml.in: Updated by Sebastian Dröge 

2007-06-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs: Set remover to null
	when finished deleting and set correct icon (Pepijn van de Geer, BGO
	#446037).

2007-06-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Banshee.SmartPlaylist/QueryBuilderModel.cs: Add
	support for querying TrackNumber in smart playlists (Michael Monreal, BGO #445773).

2007-06-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs: Increment the counter
	to make the (gui) counter and progressbar work (Pepijn van de Geer,
	BGO #445770).

2007-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from Brian Nickel fixing the build.

	* src/Core/Banshee.Base/FileTrackInfo.cs:
	* src/Core/Banshee.Base/IO/IOProxy.cs:
	* src/Core/Banshee.Base/StreamTagger.cs:
	* src/Dap/Banshee.Dap.Ipod/DatabaseRebuilder.cs: Work with latest TagLib#.

2007-05-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Banshee.PlayerMigration/PlayerImportDialog.cs:
	* src/Core/Banshee.Base/Banshee.PlayerMigration/AmarokPlayerImport.cs:
	* src/Core/Banshee.Base/Banshee.PlayerMigration/RhythmboxPlayerImport.cs:
	Make some strings translatable.

2007-05-28  Aaron Bockover  <abock@gnome.org>

	Patch to provide 16x16 versions of the playlist icons (BGO #398484, 
	Michael Monreal

	* src/Core/Banshee/PlayerInterface.cs:
	* src/Core/Banshee.Base/Sources/AbstractPlaylistSource.cs:
	* src/Core/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistSource.cs:
	Reference source-smart-playlist-{16,22} and source-playlist-{16,22}

	* data/images/source-smart-playlist-16.png:
	* data/images/source-playlist-16.png: 16x16 versions of the playlist icons
